tests/diagnostics/wrong_arg_count.kal
# 'add' takes two arguments but is called with one.
def add(a b) a + b;
add(1);
